# fminus

./: .gitignore  Cargo.toml  README.md  example.fm
crates/interpreter/: Cargo.toml
crates/interpreter/src/: builtin.rs  eval.rs  lib.rs  scope.rs  value.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/parser/src/ast/: expression.rs  mod.rs  statement.rs
crates/tree-sitter-fminus/: .gitignore  Cargo.toml  binding.gyp  grammar.js  log.html  package-lock.json  package.json
crates/tree-sitter-fminus/bindings/node/: binding.cc  index.js
crates/tree-sitter-fminus/bindings/rust/: lib.rs
crates/tree-sitter-fminus/src/: grammar.json  node-types.json  parser.c
crates/tree-sitter-fminus/test/corpus/: expression.txt  function_call_infix.txt  function_call_par.txt  function_call_prefix.txt  lambda.txt  statement.txt
crates/vm/: Cargo.toml
crates/vm/src/: builtin.rs  eval.rs  lib.rs  value.rs
fmlib/: selftest.fm  std.fm
src/: lib.rs  main.rs
tests/: selftest.rs  simple.rs
