[package]
name = "fminus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.11"
clap_derive = "4.4.7"
interpreter = { path = "crates/interpreter" }

[workspace]
members = [
    "crates/parser",
    "crates/interpreter",
]
